--- a/styles.css
+++ b/styles.css
@@ -13,10 +13,6 @@ body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   min-height: 100dvh;
-  max-width: 100vw;
-}
-
-main {
   max-width: 1440px;
   padding: 0.5em;
 }
@@ -32,9 +28,18 @@ a {
 
 img {
   width: 100%;
+  height: 300px;
+  object-fit: cover;
 }
 
-section {
+main {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+  flex-wrap: wrap;
+}
+
+div {
   max-width: 300px;
   padding: 0.75em;
   border-radius: 10px;
